# justshake-cocktails-api

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  JustShake.Cocktails.sln  README.md  docker-compose.yml  go.mod  go.sum
.github/workflow/: go.yml
.github/workflows/: build-main-branch.yml  go.yml  pr-main-branch.yml
cmd/scraper/: main.go
cmd/scraper/html-example/: base-cocktails.html
cmd/scraper/html-example/cocktails/: 32-krov-i-pesok.html  368-dzhin-tonik.html
config/: config.go  config.yml
docs/: docs.go  swagger.json  swagger.yaml
internal/app/: app.go  telegram_bot.go
internal/controller/http/v1/: cocktails.go  mapper.go  router.go
internal/domain/cocktail-aggregate/: cocktail.go  interfaces.go
internal/domain/models/: models.go
internal/domain/user-aggregate/: interfaces.go  user.go
internal/infrastructure/: cocktails_repository.go  interfaces.go
internal/infrastructure/repositories/: cocktails_repository.go  interfaces.go  users_repository.go
internal/use_cases/: cocktails.go  interfaces.go  mappers.go  models.go
internal/use_cases/cocktails/: cocktails.go  interfaces.go  models.go
internal/use_cases/users/: models.go  users.go
old-go/: go.mod
old-go/cmd/app/: main.go
old-go/cmd/scraper/: main.go
old-go/config/: config.go
old-go/docs/: docs.go  swagger.json
old-go/internal/app/: app.go
old-go/internal/domain/cocktail-aggregate/: cocktail.go
old-go/internal/domain/user-aggregate/: user.go
old-go/internal/infrastructure/repositories/: users_repository.go
old-go/internal/use_cases/cocktails/: interfaces.go  mappers.go  models.go
old-go/internal/use_cases/users/: interfaces.go  users.go
old-go/pkg/mng/: mongo.go
pkg/mongo/: mongo.go
src/: main.rs
src/JustSquad.Cocktails/: JustSquad.Cocktails.csproj
src/JustSquad.Cocktails/Extensions/: ServiceCollectionExtensions.cs
src/JustSquad.Cocktails/Properties/: launchSettings.json
src/api/: common.rs  configurations.rs  example.rs  handlers.rs  mod.rs  responses.rs  routes_common.rs
src/api/cocktails/: handlers.rs  mod.rs  models.rs  routes.rs
src/api/handlers/: cocktails.rs  mod.rs
src/api/system/: handlers.rs  mod.rs  models.rs  routes.rs
src/app/: mod.rs
src/bot/: callback_handlers.rs  commands.rs  configurations.rs  dialogue.rs  inline_keyboards.rs  message_processor.rs  mod.rs
src/domain/: mod.rs
src/domain/aggregates/: mod.rs
src/infrastructure/: mod.rs  mongo.rs
src/infrastructure/configurations/: mod.rs
src/infrastructure/mongo/: db_models.rs  mod.rs
src/infrastructure/repositories/: cocktail_repository.rs  mod.rs  user_repository.rs
src/shared/: mod.rs
(+3 files in other folders)
