[package]
name = "justshake-cocktails-api"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5.0"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }                                                                 
serde = "1.0"
serde_json = "1.0"
dotenv = "0.15.0"
envconfig = "0.11.0"
chrono = "0.4.38"
uuid = "1.10.0"

# infrastructure connections
postgres = "0.19.8"
tokio-postgres = { version = "0.7.11", features = ["with-chrono-0_4"] }

# Use vendored openssl. We don't depend on it directly.
openssl = { version = "0.10.41", features = ["vendored"], optional = true }
warp = "0.3.7"

[features]
vendored-openssl = ["openssl"]
