[package]
name = "justshake-cocktails-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0" }
teloxide = { version = "0.13", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5.0"
tokio = { version = "1.8", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
envconfig = "0.11.0"
chrono = "0.4"
uuid = "1.10.0"
futures="0.3"
async-trait="0.1.83"
strum={version = "0.26", features = ["derive"]}
thiserror={version="1.0"}
dotenvy = { version = "0.15" }

# swagger
utoipa = {version = "5.3", features = ["uuid"]}
utoipa-swagger-ui = {version = "8.1"}

# infrastructure connections

# Use vendored openssl. We don't depend on it directly.
openssl = { version = "0.10.41", features = ["vendored"], optional = true }
warp = "0.3.7"

[dependencies.mongodb]
version = "3.1.0"

[features]
vendored-openssl = ["openssl"]
